(feat)updated checkout page to be dynamic (stretch challenge)
I made the checkout page dynamic similar to how the ProductList.mjs logic works, also setup a placeholder checkout button with no functionality besides an alert to set it up later.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,13 +101,24 @@ p {
 
 button {
   padding: 0.5em 2em;
-  background-color: var(--secondary-color);
+  background-color: var(--tertiary-color);
   color: white;
   margin: auto;
   display: block;
   border: 0;
   font-size: var(--large-font);
   cursor: pointer;
+  border-radius: 1rem;
+  border: 3px solid var(--primary-color);
+  transition: background-color 250ms ease;
+}
+
+button:hover {
+  background-color: var(--secondary-color);
+}
+
+a {
+  text-decoration: none;
 }
 
 .divider {
