--- a/src/css/style.css
+++ b/src/css/style.css
@@ -90,7 +90,7 @@ p {
   margin-top: -1.3em;
 }
 
-.logo--square > div {
+.logo--square>div {
   margin-top: -1.7em;
 }
 
@@ -176,6 +176,17 @@ button {
 .products {
   margin-top: 2rem;
   padding: 1rem;
+}
+
+.product-categories {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.product-categories img {
+  width: 50px;
+  height: auto;
 }
 
 .product-list {
