--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,6 +108,15 @@ button {
   border: 0;
   font-size: var(--large-font);
   cursor: pointer;
+  border: 3px solid var(--tertiary-color);
+  border-radius: 0.5rem;
+  transition: background-color 250ms ease,
+    border-radius 150ms ease;
+}
+
+button:hover {
+  background-color: #f0a868;
+  border-radius: 1rem;
 }
 
 .divider {
